# Collagen_Elastin

./: .gitignore  .gitignore~  README.md  SBATCH.sh  SBATCH.sh~  build_bend_model_crc.sh  build_model_crc.sh  build_model_docker.sh  build_model_hpcc.sh  data_Rec_collagen_0.01_elastin_0.003_10_10_10.xml  data_Rec_collagen_0.01_elastin_0.003_10_10_10.xml_2020.01.29_21-03-38.sta  data_Rec_collagen_0.01_elastin_0.003_10_10_10.xml_2020.01.30_16-25-22.sta  main.cpp  storage.cu  storage.h  system_builder.cpp
collagen/: SBATCH.sh  SBATCH.sh~
collagen/Animation__max_nodes_50109_max_z_9_max_x_9_axis_0_pullwidth_1_eps_1150/: Collagen_Network_00046.vtk
collagen/Animation__max_nodes_50109_max_z_9_max_x_9_axis_0_pullwidth_1_eps_1200/: Elastin_Network_00046.vtk
collagen/Animation__max_nodes_50109_max_z_9_max_x_9_axis_1_pullwidth_1_eps_1150/: Collagen_Network_00045.vtk  Elastin_Network_00045.vtk
kubernetes_files/: batch-job-collagen.yaml  create-pod-collagen.sh  delete-pod-collagen.sh  interactive_collagen.yaml  login-pod-collagen.sh  submit_batch_collagen.sh
kubernetes_files/docker_example_file/: Dockerfile  Readme.txt  Singularity
matlab_scripts/: Readme.txt  data.xml  data.xml~  data_collagen.xml  data_collagen.xml~  data_simple.xml  generate_graph.m  generate_graph_parameters.m  generate_initial_structure.m  length_alignment_matcher.m  settings.txt
matlab_scripts/xml_data/: data_Rec_collagen_0.01_elastin_0.003_10_10_10_
post_processing/: RandomAlignmentParser.py
src/: CMakeLists.txt  Makefile  Storage.cu  Storage.h  System.cu  System.h  SystemBuilder.cpp  SystemBuilder.h  SystemStructures.h  cmake_install.cmake  functor_misc.h  main.cpp  storage.cu  storage.h  system.cu  system.h  system_builder.cpp  system_builder.h  system_structures.h
src/src_bucket_scheme/: Bucket_Net.cu  Bucket_Net.h  CMakeLists.txt  bucket_scheme.cu  bucket_scheme.h  function_extend.h  functor_bucket_indexer.h  functor_neighbor.h
src/src_collagen_elastin/: CMakeLists.txt  Makefile  advance_positions.cu  advance_positions.h  bending_spring.cu  bending_spring.h  collagen_elastin_spring.cu  collagen_elastin_spring.h  functor_advance_pos.h  functor_bending.h  functor_calc_strain_params.h  functor_collagen_elastin.h  functor_de_link_nodes.h  functor_link_nodes.h  link_nodes.cu  params_calc.cu  params_calc.h
src/src_ext_lib/pugixml/: Makefile  cmake_install.cmake
src/src_ext_lib/pugixml/lib64/cmake/pugixml/: pugixml-config-noconfig.cmake  pugixml-config.cmake
src/src_external_force/: CMakeLists.txt  external_force.cu  external_force.h  functor_external_force.h  functor_external_pull.h  functor_strain.h
src/src_fibrin/: Advance_Positions_Fibrin.cu  Advance_Positions_Fibrin.h  CMakeLists.txt  Link_Nodes.cu  Link_Nodes.h  Makefile  Params_Calc.cu  Params_Calc.h  Torsion_Force.cu  Torsion_Force.h  WLC_Force.cu  WLC_Force.h  functor_advance_pos.h  functor_calc_strain_params.h  functor_de_link_nodes.h  functor_link_nodes.h  functor_torsion.h  functor_wlc.h
src_bucket_scheme/: bucket_scheme.h  function_extend.h  functor_bucket_indexer.h  functor_neighbor.h
src_collagen_elastin/: advance_positions.h  bending_spring.cu  functor_link_nodes.h  link_nodes.h  params_calc.cu  params_calc.h
src_external_force/: CMakeLists.txt  functor_external_force.h
